Details
-
Bug
-
Status: Resolved
-
Critical
-
Resolution: Fixed
-
Impala 2.7.0, Impala 2.8.0, Impala 2.9.0, Impala 2.10.0, Impala 2.11.0
-
ghx-label-3
Description
Running ASAN builds at revision 7e368b8f0f6255d338beb127ff6a3c4e11a28c9e shows the following errors:
50/88 Test #50: rpc-mgr-test .....................***Failed 3.33 sec [==========] Running 5 tests from 2 test cases. [----------] Global test environment set-up. [----------] 2 tests from RpcMgrTest [ RUN ] RpcMgrTest.SlowCallback ================================================================= ==30258==ERROR: AddressSanitizer: heap-use-after-free on address 0x60c000005f98 at pc 0x00000132292c bp 0x7f55d17926d0 sp 0x7f55d1791e80 READ of size 97 at 0x60c000005f98 thread T17 (server-negotiat) #0 0x132292b in strlen /data/jenkins/workspace/verify-impala-toolchain-package-build/label/ec2-package-centos-6/toolchain/source/llvm/llvm-3.9.1.src/projects/compiler-rt/lib/asan/../sanitizer_common/sanitizer_common_interceptors.inc:227 #1 0x3e6660b0a0 in _sasl_strdup (/usr/lib64/libsasl2.so.2+0x3e6660b0a0) #2 0x3e6661135c in sasl_server_new (/usr/lib64/libsasl2.so.2+0x3e6661135c) #3 0x1580017 in kudu::rpc::ServerNegotiation::InitSaslServer()::$_1::operator()() const /data/jenkins/workspace/impala-asf-master-core-asan/repos/Impala/be/src/kudu/rpc/server_negotiation.cc:378:74 #4 0x156e105 in kudu::rpc::WrapSaslCall(sasl_conn*, std::function<int ()> const&) /data/jenkins/workspace/impala-asf-master-core-asan/repos/Impala/be/src/kudu/rpc/sasl_common.cc:324:12 #5 0x157ceab in kudu::rpc::ServerNegotiation::InitSaslServer() /data/jenkins/workspace/impala-asf-master-core-asan/repos/Impala/be/src/kudu/rpc/server_negotiation.cc:378:36 #6 0x157a631 in kudu::rpc::ServerNegotiation::AuthenticateBySasl(kudu::faststring*) /data/jenkins/workspace/impala-asf-master-core-asan/repos/Impala/be/src/kudu/rpc/server_negotiation.cc:588:36 #7 0x1576e7f in kudu::rpc::ServerNegotiation::Negotiate() /data/jenkins/workspace/impala-asf-master-core-asan/repos/Impala/be/src/kudu/rpc/server_negotiation.cc:243:40 #8 0x15a6f48 in kudu::rpc::DoServerNegotiation(kudu::rpc::Connection*, kudu::rpc::RpcAuthentication, kudu::rpc::RpcEncryption, kudu::MonoTime const&) /data/jenkins/workspace/impala-asf-master-core-asan/repos/Impala/be/src/kudu/rpc/negotiation.cc:263:55 #9 0x15a63d4 in kudu::rpc::Negotiation::RunNegotiation(scoped_refptr<kudu::rpc::Connection> const&, kudu::rpc::RpcAuthentication, kudu::rpc::RpcEncryption, kudu::MonoTime) /data/jenkins/workspace/impala-asf-master-core-asan/repos/Impala/be/src/kudu/rpc/negotiation.cc:281:9 #10 0x1561edb in kudu::internal::InvokeHelper<false, void, kudu::internal::RunnableAdapter<void (*)(scoped_refptr<kudu::rpc::Connection> const&, kudu::rpc::RpcAuthentication, kudu::rpc::RpcEncryption, kudu::MonoTime)>, void (kudu::rpc::Connection*, kudu::rpc::RpcAuthentication const&, kudu::rpc::RpcEncryption const&, kudu::MonoTime const&)>::MakeItSo(kudu::internal::RunnableAdapter<void (*)(scoped_refptr<kudu::rpc::Connection> const&, kudu::rpc::RpcAuthentication, kudu::rpc::RpcEncryption, kudu::MonoTime)>, kudu::rpc::Connection*, kudu::rpc::RpcAuthentication const&, kudu::rpc::RpcEncryption const&, kudu::MonoTime const&) /data/jenkins/workspace/impala-asf-master-core-asan/repos/Impala/be/src/gutil/bind_internal.h:923:14 #11 0x1561cf9 in kudu::internal::Invoker<4, kudu::internal::BindState<kudu::internal::RunnableAdapter<void (*)(scoped_refptr<kudu::rpc::Connection> const&, kudu::rpc::RpcAuthentication, kudu::rpc::RpcEncryption, kudu::MonoTime)>, void (scoped_refptr<kudu::rpc::Connection> const&, kudu::rpc::RpcAuthentication, kudu::rpc::RpcEncryption, kudu::MonoTime), void (scoped_refptr<kudu::rpc::Connection>, kudu::rpc::RpcAuthentication, kudu::rpc::RpcEncryption, kudu::MonoTime)>, void (scoped_refptr<kudu::rpc::Connection> const&, kudu::rpc::RpcAuthentication, kudu::rpc::RpcEncryption, kudu::MonoTime)>::Run(kudu::internal::BindStateBase*) /data/jenkins/workspace/impala-asf-master-core-asan/repos/Impala/be/src/gutil/bind_internal.h:1457:12 #12 0x2e43c41 in boost::_bi::bind_t<void, boost::_mfi::cmf0<void, kudu::Callback<void ()> >, boost::_bi::list1<boost::_bi::value<kudu::Callback<void ()> > > >::operator()() /data/jenkins/workspace/impala-asf-master-core-asan/Impala-Toolchain/boost-1.57.0-p3/include/boost/bind/bind_template.hpp:20:16 #13 0x1466762 in boost::function0<void>::operator()() const /data/jenkins/workspace/impala-asf-master-core-asan/Impala-Toolchain/boost-1.57.0-p3/include/boost/function/function_template.hpp:766:14 #14 0x2e409d6 in kudu::ThreadPool::DispatchThread(bool) /data/jenkins/workspace/impala-asf-master-core-asan/repos/Impala/be/src/kudu/util/threadpool.cc:347:23 #15 0x2e45871 in boost::_bi::bind_t<void, boost::_mfi::mf1<void, kudu::ThreadPool, bool>, boost::_bi::list2<boost::_bi::value<kudu::ThreadPool*>, boost::_bi::value<bool> > >::operator()() /data/jenkins/workspace/impala-asf-master-core-asan/Impala-Toolchain/boost-1.57.0-p3/include/boost/bind/bind_template.hpp:20:16 #16 0x1466762 in boost::function0<void>::operator()() const /data/jenkins/workspace/impala-asf-master-core-asan/Impala-Toolchain/boost-1.57.0-p3/include/boost/function/function_template.hpp:766:14 #17 0x14639a9 in kudu::Thread::SuperviseThread(void*) /data/jenkins/workspace/impala-asf-master-core-asan/repos/Impala/be/src/kudu/util/thread.cc:591:3 #18 0x3e64207850 in start_thread (/lib64/libpthread.so.0+0x3e64207850) #19 0x3e63ee894c in clone (/lib64/libc.so.6+0x3e63ee894c) 0x60c000005f98 is located 24 bytes inside of 121-byte region [0x60c000005f80,0x60c000005ff9) freed by thread T0 here: #0 0x13cc280 in operator delete(void*) /data/jenkins/workspace/verify-impala-toolchain-package-build/label/ec2-package-centos-6/toolchain/source/llvm/llvm-3.9.1.src/projects/compiler-rt/lib/asan/asan_new_delete.cc:110 #1 0x13e876f in impala::InitCommonRuntime(int, char**, bool, impala::TestInfo::Mode) /data/jenkins/workspace/impala-asf-master-core-asan/repos/Impala/be/src/common/init.cc:211:38 #2 0x13d2387 in main /data/jenkins/workspace/impala-asf-master-core-asan/repos/Impala/be/src/rpc/rpc-mgr-test.cc:311:3 #3 0x3e63e1ecdc in __libc_start_main (/lib64/libc.so.6+0x3e63e1ecdc) previously allocated by thread T0 here: #0 0x13cbc00 in operator new(unsigned long) /data/jenkins/workspace/verify-impala-toolchain-package-build/label/ec2-package-centos-6/toolchain/source/llvm/llvm-3.9.1.src/projects/compiler-rt/lib/asan/asan_new_delete.cc:78 #1 0x7f55df376c48 in __gnu_cxx::new_allocator<char>::allocate(unsigned long, void const*) /data/jenkins/workspace/verify-impala-toolchain-package-build/label/ec2-package-centos-6/toolchain/source/gcc/build-4.9.2/x86_64-unknown-linux-gnu/libstdc++-v3/include/ext/new_allocator.h:104 #2 0x7f55df376c48 in std::string::_Rep::_S_create(unsigned long, unsigned long, std::allocator<char> const&) /data/jenkins/workspace/verify-impala-toolchain-package-build/label/ec2-package-centos-6/toolchain/source/gcc/build-4.9.2/x86_64-unknown-linux-gnu/libstdc++-v3/include/bits/basic_string.tcc:607 Thread T17 (server-negotiat) created by T5 (rpc reactor-302) here: #0 0x12ee2cd in __interceptor_pthread_create /data/jenkins/workspace/verify-impala-toolchain-package-build/label/ec2-package-centos-6/toolchain/source/llvm/llvm-3.9.1.src/projects/compiler-rt/lib/asan/asan_interceptors.cc:245 #1 0x146303a in kudu::Thread::StartThread(std::string const&, std::string const&, boost::function<void ()> const&, unsigned long, scoped_refptr<kudu::Thread>*) /data/jenkins/workspace/impala-asf-master-core-asan/repos/Impala/be/src/kudu/util/thread.cc:514:15 #2 0x2e41f55 in kudu::Status kudu::Thread::Create<void (kudu::ThreadPool::*)(bool), kudu::ThreadPool*, bool>(std::string const&, std::string const&, void (kudu::ThreadPool::* const&)(bool), kudu::ThreadPool* const&, bool const&, scoped_refptr<kudu::Thread>*) /data/jenkins/workspace/impala-asf-master-core-asan/repos/Impala/be/src/kudu/util/thread.h:164:12 #3 0x2e3f0bf in kudu::ThreadPool::CreateThreadUnlocked() /data/jenkins/workspace/impala-asf-master-core-asan/repos/Impala/be/src/kudu/util/threadpool.cc:392:14 #4 0x2e3fb1c in kudu::ThreadPool::Submit(std::shared_ptr<kudu::Runnable>) /data/jenkins/workspace/impala-asf-master-core-asan/repos/Impala/be/src/kudu/util/threadpool.cc:218:21 #5 0x2e3f84b in kudu::ThreadPool::SubmitFunc(boost::function<void ()>) /data/jenkins/workspace/impala-asf-master-core-asan/repos/Impala/be/src/kudu/util/threadpool.cc:186:10 #6 0x2e3f68d in kudu::ThreadPool::SubmitClosure(kudu::Callback<void ()> const&) /data/jenkins/workspace/impala-asf-master-core-asan/repos/Impala/be/src/kudu/util/threadpool.cc:182:10 #7 0x1551727 in kudu::rpc::ReactorThread::StartConnectionNegotiation(scoped_refptr<kudu::rpc::Connection> const&) /data/jenkins/workspace/impala-asf-master-core-asan/repos/Impala/be/src/kudu/rpc/reactor.cc:484:54 #8 0x155114d in kudu::rpc::ReactorThread::RegisterConnection(scoped_refptr<kudu::rpc::Connection>) /data/jenkins/workspace/impala-asf-master-core-asan/repos/Impala/be/src/kudu/rpc/reactor.cc:235:14 #9 0x155ca2b in kudu::rpc::RegisterConnectionTask::Run(kudu::rpc::ReactorThread*) /data/jenkins/workspace/impala-asf-master-core-asan/repos/Impala/be/src/kudu/rpc/reactor.cc:708:14 #10 0x1550e04 in kudu::rpc::ReactorThread::AsyncHandler(ev::async&, int) /data/jenkins/workspace/impala-asf-master-core-asan/repos/Impala/be/src/kudu/rpc/reactor.cc:228:10 #11 0x3e5e082 in ev_invoke_pending (/data/jenkins/workspace/impala-asf-master-core-asan/repos/Impala/be/build/debug/rpc/rpc-mgr-test+0x3e5e082) Thread T5 (rpc reactor-302) created by T0 here: #0 0x12ee2cd in __interceptor_pthread_create /data/jenkins/workspace/verify-impala-toolchain-package-build/label/ec2-package-centos-6/toolchain/source/llvm/llvm-3.9.1.src/projects/compiler-rt/lib/asan/asan_interceptors.cc:245 #1 0x146303a in kudu::Thread::StartThread(std::string const&, std::string const&, boost::function<void ()> const&, unsigned long, scoped_refptr<kudu::Thread>*) /data/jenkins/workspace/impala-asf-master-core-asan/repos/Impala/be/src/kudu/util/thread.cc:514:15 #2 0x1556fc8 in kudu::Status kudu::Thread::Create<void (kudu::rpc::ReactorThread::*)(), kudu::rpc::ReactorThread*>(std::string const&, std::string const&, void (kudu::rpc::ReactorThread::* const&)(), kudu::rpc::ReactorThread* const&, scoped_refptr<kudu::Thread>*) /data/jenkins/workspace/impala-asf-master-core-asan/repos/Impala/be/src/kudu/util/thread.h:158:12 #3 0x154f061 in kudu::rpc::ReactorThread::Init() /data/jenkins/workspace/impala-asf-master-core-asan/repos/Impala/be/src/kudu/rpc/reactor.cc:129:10 #4 0x15556dc in kudu::rpc::Reactor::Init() /data/jenkins/workspace/impala-asf-master-core-asan/repos/Impala/be/src/kudu/rpc/reactor.cc:620:18 #5 0x1537416 in kudu::rpc::Messenger::Init() /data/jenkins/workspace/impala-asf-master-core-asan/repos/Impala/be/src/kudu/rpc/messenger.cc:478:41 #6 0x153637f in kudu::rpc::MessengerBuilder::Build(std::shared_ptr<kudu::rpc::Messenger>*) /data/jenkins/workspace/impala-asf-master-core-asan/repos/Impala/be/src/kudu/rpc/messenger.cc:273:46 #7 0x15d86a8 in impala::RpcMgr::Init() /data/jenkins/workspace/impala-asf-master-core-asan/repos/Impala/be/src/rpc/rpc-mgr.cc:74:31 #8 0x13dc243 in impala::RpcMgrTestBase<testing::Test>::SetUp() /data/jenkins/workspace/impala-asf-master-core-asan/repos/Impala/be/src/rpc/rpc-mgr-test.cc:82:44 #9 0x3ebba32 in void testing::internal::HandleExceptionsInMethodIfSupported<testing::Test, void>(testing::Test*, void (testing::Test::*)(), char const*) (/data/jenkins/workspace/impala-asf-master-core-asan/repos/Impala/be/build/debug/rpc/rpc-mgr-test+0x3ebba32) SUMMARY: AddressSanitizer: heap-use-after-free /data/jenkins/workspace/verify-impala-toolchain-package-build/label/ec2-package-centos-6/toolchain/source/llvm/llvm-3.9.1.src/projects/compiler-rt/lib/asan/../sanitizer_common/sanitizer_common_interceptors.inc:227 in strlen Shadow bytes around the buggy address: 0x0c187fff8ba0: fa fa fa fa fa fa fa fa 00 00 00 00 00 00 00 00 0x0c187fff8bb0: 00 00 00 00 00 00 00 fa fa fa fa fa fa fa fa fa 0x0c187fff8bc0: fd fd fd fd fd fd fd fd fd fd fd fd fd fd fd fa 0x0c187fff8bd0: fa fa fa fa fa fa fa fa fd fd fd fd fd fd fd fd 0x0c187fff8be0: fd fd fd fd fd fd fd fa fa fa fa fa fa fa fa fa =>0x0c187fff8bf0: fd fd fd[fd]fd fd fd fd fd fd fd fd fd fd fd fd 0x0c187fff8c00: fa fa fa fa fa fa fa fa 00 00 00 00 00 00 00 00 0x0c187fff8c10: 00 00 00 00 00 00 00 06 fa fa fa fa fa fa fa fa 0x0c187fff8c20: fd fd fd fd fd fd fd fd fd fd fd fd fd fd fd fa 0x0c187fff8c30: fa fa fa fa fa fa fa fa fd fd fd fd fd fd fd fd 0x0c187fff8c40: fd fd fd fd fd fd fd fa fa fa fa fa fa fa fa fa Shadow byte legend (one shadow byte represents 8 application bytes): Addressable: 00 Partially addressable: 01 02 03 04 05 06 07 Heap left redzone: fa Heap right redzone: fb Freed heap region: fd Stack left redzone: f1 Stack mid redzone: f2 Stack right redzone: f3 Stack partial redzone: f4 Stack after return: f5 Stack use after scope: f8 Global redzone: f9 Global init order: f6 Poisoned by user: f7 Container overflow: fc Array cookie: ac Intra object redzone: bb ASan internal: fe Left alloca redzone: ca Right alloca redzone: cb ==30258==ABORTING
==30154==ERROR: AddressSanitizer: heap-use-after-free on address 0x60c000005d58 at pc 0x000001329e5c bp 0x7f4a8eb4f200 sp 0x7f4a8eb4e9b0 READ of size 103 at 0x60c000005d58 thread T62 #0 0x1329e5b in strlen /data/jenkins/workspace/verify-impala-toolchain-package-build/label/ec2-package-centos-6/toolchain/source/llvm/llvm-3.9.1.src/projects/compiler-rt/lib/asan/../sanitizer_common/sanitizer_common_interceptors.inc:227 #1 0x3e6660b0a0 in _sasl_strdup (/usr/lib64/libsasl2.so.2+0x3e6660b0a0) #2 0x3e6661135c in sasl_server_new (/usr/lib64/libsasl2.so.2+0x3e6661135c) #3 0x1977475 in sasl::TSaslServer::setupSaslContext() /data/jenkins/workspace/impala-asf-master-core-asan/repos/Impala/be/src/transport/TSasl.cpp:214:16 #4 0x1978c77 in apache::thrift::transport::TSaslServerTransport::handleSaslStartMessage() /data/jenkins/workspace/impala-asf-master-core-asan/repos/Impala/be/src/transport/TSaslServerTransport.cpp:124:10 #5 0x197ef59 in apache::thrift::transport::TSaslTransport::doSaslNegotiation() /data/jenkins/workspace/impala-asf-master-core-asan/repos/Impala/be/src/transport/TSaslTransport.cpp:81:7 #6 0x19793fa in apache::thrift::transport::TSaslServerTransport::Factory::getTransport(boost::shared_ptr<apache::thrift::transport::TTransport>) /data/jenkins/workspace/impala-asf-master-core-asan/repos/Impala/be/src/transport/TSaslServerTransport.cpp:174:24 #7 0x15ee146 in apache::thrift::server::TAcceptQueueServer::SetupConnection(boost::shared_ptr<apache::thrift::transport::TTransport>) /data/jenkins/workspace/impala-asf-master-core-asan/repos/Impala/be/src/rpc/TAcceptQueueServer.cpp:146:46 #8 0x15f02f2 in apache::thrift::server::TAcceptQueueServer::serve()::$_0::operator()(int, boost::shared_ptr<apache::thrift::transport::TTransport> const&) const /data/jenkins/workspace/impala-asf-master-core-asan/repos/Impala/be/src/rpc/TAcceptQueueServer.cpp:220:15 #9 0x15f81f3 in boost::function2<void, int, boost::shared_ptr<apache::thrift::transport::TTransport> const&>::operator()(int, boost::shared_ptr<apache::thrift::transport::TTransport> const&) const /data/jenkins/workspace/impala-asf-master-core-asan/Impala-Toolchain/boost-1.57.0-p3/include/boost/function/function_template.hpp:766:14 #10 0x15f7255 in impala::ThreadPool<boost::shared_ptr<apache::thrift::transport::TTransport> >::WorkerThread(int) /data/jenkins/workspace/impala-asf-master-core-asan/repos/Impala/be/src/util/thread-pool.h:153:9 #11 0x15f77f1 in boost::_bi::bind_t<void, boost::_mfi::mf1<void, impala::ThreadPool<boost::shared_ptr<apache::thrift::transport::TTransport> >, int>, boost::_bi::list2<boost::_bi::value<impala::ThreadPool<boost::shared_ptr<apache::thrift::transport::TTransport> >*>, boost::_bi::value<int> > >::operator()() /data/jenkins/workspace/impala-asf-master-core-asan/Impala-Toolchain/boost-1.57.0-p3/include/boost/bind/bind_template.hpp:20:16 #12 0x16047e2 in boost::function0<void>::operator()() const /data/jenkins/workspace/impala-asf-master-core-asan/Impala-Toolchain/boost-1.57.0-p3/include/boost/function/function_template.hpp:766:14 #13 0x1a6a3a7 in impala::Thread::SuperviseThread(std::string const&, std::string const&, boost::function<void ()>, impala::Promise<long>*) /data/jenkins/workspace/impala-asf-master-core-asan/repos/Impala/be/src/util/thread.cc:352:3 #14 0x1a75215 in void boost::_bi::list4<boost::_bi::value<std::string>, boost::_bi::value<std::string>, boost::_bi::value<boost::function<void ()> >, boost::_bi::value<impala::Promise<long>*> >::operator()<void (*)(std::string const&, std::string const&, boost::function<void ()>, impala::Promise<long>*), boost::_bi::list0>(boost::_bi::type<void>, void (*&)(std::string const&, std::string const&, boost::function<void ()>, impala::Promise<long>*), boost::_bi::list0&, int) /data/jenkins/workspace/impala-asf-master-core-asan/Impala-Toolchain/boost-1.57.0-p3/include/boost/bind/bind.hpp:457:9 #15 0x1a75091 in boost::_bi::bind_t<void, void (*)(std::string const&, std::string const&, boost::function<void ()>, impala::Promise<long>*), boost::_bi::list4<boost::_bi::value<std::string>, boost::_bi::value<std::string>, boost::_bi::value<boost::function<void ()> >, boost::_bi::value<impala::Promise<long>*> > >::operator()() /data/jenkins/workspace/impala-asf-master-core-asan/Impala-Toolchain/boost-1.57.0-p3/include/boost/bind/bind_template.hpp:20:16 #16 0x2fc0649 in thread_proxy (/data/jenkins/workspace/impala-asf-master-core-asan/repos/Impala/be/build/debug/rpc/thrift-server-test+0x2fc0649) #17 0x3e64207850 in start_thread (/lib64/libpthread.so.0+0x3e64207850) #18 0x3e63ee894c in clone (/lib64/libc.so.6+0x3e63ee894c) 0x60c000005d58 is located 24 bytes inside of 127-byte region [0x60c000005d40,0x60c000005dbf) freed by thread T0 here: #0 0x13d37b0 in operator delete(void*) /data/jenkins/workspace/verify-impala-toolchain-package-build/label/ec2-package-centos-6/toolchain/source/llvm/llvm-3.9.1.src/projects/compiler-rt/lib/asan/asan_new_delete.cc:110 #1 0x141564f in impala::InitCommonRuntime(int, char**, bool, impala::TestInfo::Mode) /data/jenkins/workspace/impala-asf-master-core-asan/repos/Impala/be/src/common/init.cc:211:38 #2 0x13e4d97 in main /data/jenkins/workspace/impala-asf-master-core-asan/repos/Impala/be/src/rpc/thrift-server-test.cc:552:3 #3 0x3e63e1ecdc in __libc_start_main (/lib64/libc.so.6+0x3e63e1ecdc) previously allocated by thread T0 here: #0 0x13d3130 in operator new(unsigned long) /data/jenkins/workspace/verify-impala-toolchain-package-build/label/ec2-package-centos-6/toolchain/source/llvm/llvm-3.9.1.src/projects/compiler-rt/lib/asan/asan_new_delete.cc:78 #1 0x7f4aa507dc48 in __gnu_cxx::new_allocator<char>::allocate(unsigned long, void const*) /data/jenkins/workspace/verify-impala-toolchain-package-build/label/ec2-package-centos-6/toolchain/source/gcc/build-4.9.2/x86_64-unknown-linux-gnu/libstdc++-v3/include/ext/new_allocator.h:104 #2 0x7f4aa507dc48 in std::string::_Rep::_S_create(unsigned long, unsigned long, std::allocator<char> const&) /data/jenkins/workspace/verify-impala-toolchain-package-build/label/ec2-package-centos-6/toolchain/source/gcc/build-4.9.2/x86_64-unknown-linux-gnu/libstdc++-v3/include/bits/basic_string.tcc:607 Thread T62 created by T61 here: #0 0x12f57fd in __interceptor_pthread_create /data/jenkins/workspace/verify-impala-toolchain-package-build/label/ec2-package-centos-6/toolchain/source/llvm/llvm-3.9.1.src/projects/compiler-rt/lib/asan/asan_interceptors.cc:245 #1 0x2fbfa29 in boost::thread::start_thread_noexcept() (/data/jenkins/workspace/impala-asf-master-core-asan/repos/Impala/be/build/debug/rpc/thrift-server-test+0x2fbfa29) Thread T61 created by T0 here: #0 0x12f57fd in __interceptor_pthread_create /data/jenkins/workspace/verify-impala-toolchain-package-build/label/ec2-package-centos-6/toolchain/source/llvm/llvm-3.9.1.src/projects/compiler-rt/lib/asan/asan_interceptors.cc:245 #1 0x2fbfa29 in boost::thread::start_thread_noexcept() (/data/jenkins/workspace/impala-asf-master-core-asan/repos/Impala/be/build/debug/rpc/thrift-server-test+0x2fbfa29) SUMMARY: AddressSanitizer: heap-use-after-free /data/jenkins/workspace/verify-impala-toolchain-package-build/label/ec2-package-centos-6/toolchain/source/llvm/llvm-3.9.1.src/projects/compiler-rt/lib/asan/../sanitizer_common/sanitizer_common_interceptors.inc:227 in strlen Shadow bytes around the buggy address: 0x0c187fff8b50: 00 00 00 00 00 00 00 fa fa fa fa fa fa fa fa fa 0x0c187fff8b60: 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 fa 0x0c187fff8b70: fa fa fa fa fa fa fa fa fd fd fd fd fd fd fd fd 0x0c187fff8b80: fd fd fd fd fd fd fd fa fa fa fa fa fa fa fa fa 0x0c187fff8b90: fd fd fd fd fd fd fd fd fd fd fd fd fd fd fd fd =>0x0c187fff8ba0: fa fa fa fa fa fa fa fa fd fd fd[fd]fd fd fd fd 0x0c187fff8bb0: fd fd fd fd fd fd fd fd fa fa fa fa fa fa fa fa 0x0c187fff8bc0: fd fd fd fd fd fd fd fd fd fd fd fd fd fd fd fa 0x0c187fff8bd0: fa fa fa fa fa fa fa fa fd fd fd fd fd fd fd fd 0x0c187fff8be0: fd fd fd fd fd fd fd fa fa fa fa fa fa fa fa fa 0x0c187fff8bf0: fd fd fd fd fd fd fd fd fd fd fd fd fd fd fd fa Shadow byte legend (one shadow byte represents 8 application bytes): Addressable: 00 Partially addressable: 01 02 03 04 05 06 07 Heap left redzone: fa Heap right redzone: fb Freed heap region: fd Stack left redzone: f1 Stack mid redzone: f2 Stack right redzone: f3 Stack partial redzone: f4 Stack after return: f5 Stack use after scope: f8 Global redzone: f9 Global init order: f6 Poisoned by user: f7 Container overflow: fc Array cookie: ac Intra object redzone: bb ASan internal: fe Left alloca redzone: ca Right alloca redzone: cb ==30154==ABORTING